--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,10 +1,59 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    height: 100%;
+    position: relative;
+
+}
+
 body {
-    background: #f7485e
+    background: #f7485e;
+    position: relative;
+    min-height: 100%;
+    font-family: "Verdana";
 }
 
 #filecheck {
-    margin : 50px auto;
+    margin: 50px auto;
+}
+section {
+    background: gainsboro;
+    margin : 2em 0;
+    border-radius: 10px;
+    display: flex;
+    padding: 1em;
+    width: 70rem;
 
+}
+#auth {
+    background: gainsboro;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5em;
+    height: 12em;
+}
+footer {
+    position: absolute;
+    float: bottom;
 
+    bottom: 0;
+    background-color: #6E6D71;
+    height: 6em;
+    margin-top: -5em;
+
+    color: aliceblue;
+    width: 100%;
+}
+.img {
+    float: left;
+    display:inline-block;
+
+}
+.contact {
 
 }
